kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fdm-monster
spec: {}
status: {}
