kubernetes/base/service-fdm-monster.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fdm-monster
  name: fdm-monster
spec:
  ports:
  - name: "4000"
    port: 4000
    protocol: TCP
    targetPort: 4000
  selector:
    app: fdm-monster
  type: ClusterIP
status:
  loadBalancer: {}
