kubernetes/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fdm-monster-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  rules:
  - host: "fdm-monster.local"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: fdm-monster
            port:
              number: 4000
